fix vertical spacing below workshops

--- a/src/ui/components/PageBuiltToLast/stylesheet.css
+++ b/src/ui/components/PageBuiltToLast/stylesheet.css
@@ -174,6 +174,10 @@
 }
 
 @media (max-width: 887px) {
+  .workshops {
+    margin-bottom: 4rem;
+  }
+
   .workshop-card {
     margin-bottom: 12rem;
     display: block;
